Logging for KB8s

--- a/logging_config.ini
+++ b/logging_config.ini
@@ -1,5 +1,5 @@
 [loggers]
-keys=root,juicer,juicer.spark.spark_minion, juicer_server, juicer.keras.keras_minion
+keys=root,juicer,juicer.spark.spark_minion, juicer_server, juicer.keras.keras_minion, juicer.scikit_learn.scikit_learn_minion
 
 [handlers]
 keys=stream_handler,juicer_handler
@@ -28,6 +28,12 @@ level=DEBUG
 propagate=0
 handlers=juicer_handler
 qualname=juicer.keras.keras_minion
+
+[logger_juicer.scikit_learn.scikit_learn_minion]
+level=INFO
+propagate=0
+handlers=juicer_handler
+qualname=juicer.scikit_learn.scikit_learn_minion
 
 [logger_juicer.kb8s]
 level=DEBUG
